--- a/packages/user_repo/pubspec.yaml
+++ b/packages/user_repo/pubspec.yaml
@@ -1,6 +1,6 @@
-name: app
-description: "A new Flutter project."
-publish_to: 'none' 
+name: user_repository 
+description: the repo that handles users
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
@@ -10,16 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.9.0
-
-  user_repository:
-    path: packages/user_repo
-
-  flutter_bloc: ^8.1.6
   equatable: ^2.0.7
   firebase_auth: ^5.3.4
-  bloc: ^8.1.4
-
+  cloud_firestore: ^5.6.0
 
 dev_dependencies:
   flutter_test:
@@ -28,5 +21,3 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-
