--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   user_repository:
     path: packages/user_repo
 
+  flashcards_repo:
+    path: packages/flashcards_package
+
   flutter_bloc: ^8.1.6
   equatable: ^2.0.7
   firebase_auth: ^5.3.4
