--- a/packages/flashcards_package/pubspec.yaml
+++ b/packages/flashcards_package/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^3.10.0
+  cloud_firestore: ^5.6.1
+
 
 dev_dependencies:
   flutter_test:
