--- a/packages/flashcards_package/pubspec.yaml
+++ b/packages/flashcards_package/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.10.0
   cloud_firestore: ^5.6.1
+  firebase_auth: ^5.3.4
+
 
 
 dev_dependencies:
