--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,17 +7,20 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
+  google_generative_ai: ^0.4.6
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
   firebase_core: ^3.9.0
-  
 
   user_repository:
     path: packages/user_repo
 
   flashcards_repo:
     path: packages/flashcards_package
+
+  gemini_repo:
+    path: packages/gemini_package
 
   flutter_bloc: ^8.1.6
   equatable: ^2.0.7
