--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   lingva_repo:
     path: packages/lingva_package
 
+  quiz_repo:
+    path: packages/quiz_package
+
   flutter_bloc: ^8.1.6
   equatable: ^2.0.7
   firebase_auth: ^5.3.4
