--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   equatable: ^2.0.7
   firebase_auth: ^5.3.4
   bloc: ^8.1.4
+  google_fonts: ^6.2.1
   # cupertino_icons: ^1.0.8
 
 
